<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="app_header">Andro Tasker</string>
    <string name="menu_settings">Settings</string>
    <string name="today_btn">Today</string>
    <string name="day_btn">Day</string>
    <string name="week_btn">Week</string>
    <string name="month_btn">Month</string>
    <string name="save_btn">Save Task</string>
    <string name="cancel_btn">Cancel</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Task Description</string>
    <string name="dvu_header">Task Manager - Day View</string>
    <string name="wvu_header">Task Manager - Week View</string>
    <string name="mvu_header">Task Manager - Month View</string>

    <!--
    <string name="settings_btn">Andro Tasker</string>
    <string name="add_btn">Andro Tasker</string>
    -->
    <string name="quarter_past">15</string>
    <string name="half_past">30</string>
    <string name="quarter_to">45</string>
    <string name="noon">12</string>
    <string name="meeting">msp meeting</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pick_time">Pick time</string>
    <string name="aboutus">About Us</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="aboutUsDetail">Team Members: Hasan, Mesba, Feroz, Elena &amp; Robin</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>

</resources>