<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <EditText
            android:id="@+id/etTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             >

            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/etTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title" >

            
        </EditText>

        <EditText
            android:id="@+id/etNote"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_body" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn" />

    </LinearLayout>

</RelativeLayout>