<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/from_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:focusable="true"
                android:onClick="chooseTime"
                android:textColor="@android:color/white"
                android:textStyle="bold" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/to_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:onClick="chooseTime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title" >
            </EditText>

            <EditText
                android:id="@+id/etNote"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_body" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="save"
                android:text="@string/save_btn" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>