<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="100" >        
        
        <Button
            android:id="@+id/day_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_btn"
            android:layout_weight="20" />

        <Button
            android:id="@+id/week_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_btn"
            android:layout_weight="20" />

        <Button
            android:id="@+id/month_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_btn"
            android:layout_weight="20" />
        
        <ImageButton
            android:id="@+id/add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add"
            android:layout_weight="20" />
        
        <ImageButton
            android:id="@+id/show_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star_big_on"
            android:layout_weight="20" />
</LinearLayout>