<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           
            android:paddingRight="20dp"
             />

        <TextView
            android:id="@+id/task1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quarter_past"
            android:paddingRight="20dp" 
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/task2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
        
           />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/half_past" 
            android:paddingRight="20dp"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/task3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            
           />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quarter_to"
            android:paddingRight="20dp"
            android:paddingLeft="10dp"
             />

        <TextView
            android:id="@+id/task4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            
           />
    </LinearLayout>
</LinearLayout>