<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/edit_from_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:textStyle="bold" >
            </Button>
            <!-- android:onClick="chooseDateFrom" -->

            <Button
                android:id="@+id/edit_from_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:textStyle="bold" >
            </Button>
            <!-- android:onClick="chooseTimeFrom" -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/edit_to_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:focusable="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" >
            </Button>
            <!-- android:onClick="chooseDateTo" -->

            <Button
                android:id="@+id/edit_to_time_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <!-- android:onClick="chooseTimeTo" -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <EditText
                android:id="@+id/edit_etTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:inputType="textNoSuggestions" >
            </EditText>

            <!--
                  <EditText
                android:id="@+id/edit_etNote"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:hint="@string/hint_body"
                android:inputType="textNoSuggestions"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"
                android:singleLine="false" >
            -->

            <EditText
                android:id="@+id/edit_etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/footer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_bar_newtask"
        android:gravity="center" />

</RelativeLayout>